# template-repo-full-stack

./: README.md
api/: fixtures.json  pyproject.toml  requirements.txt
api/api/: settings.py  urls.py
api/clients/: models.py  services.py  urls.py  views.py
api/clients/migrations/: 0001_initial.py  0002_accountingperiod_client.py  0003_alter_client_options_accountingperiod_notes_and_more.py
nextjs/: package-lock.json  package.json
nextjs/app/: layout.js
nextjs/app/clients/: page.jsx
nextjs/app/clients/accounting-period/[slug]/: page.jsx
nextjs/app/clients/accounting-period/[slug]/create/: page.jsx
nextjs/app/clients/create/: page.jsx
nextjs/config/: endpoints.js
