[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonny Blain",email = "jblain@mks.co.uk"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django (>=4.2,<5.0)",
    "django-extensions (>=3.2.3,<4.0.0)",
    "ruff (>=0.9.2,<0.10.0)",
    "black (>=24.10.0,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode=false